DT-2085 Fixes CTA alignment on desktop

--- a/src/client/components/templates/business-guide-article/business-guide-article.scss
+++ b/src/client/components/templates/business-guide-article/business-guide-article.scss
@@ -33,12 +33,14 @@
 }
 
 .callToAction {
-    @include grid-media($sba-grid-small){
+    @include grid-media($sba-grid-small) {
         @include grid-column(6, $mobile-0gutter)
     }
-    @include grid-media($sba-grid-medium){
+    @include grid-media($sba-grid-medium) {
         @include grid-column(12, $sba-grid-medium)
     }
-    @include grid-column(7, $sba-grid-large);
-    @include grid-push(4);
+    @include grid-media($sba-grid-large) {
+        @include grid-column(7, $sba-grid-large);
+        @include grid-push(4);
+    }
 }
